:bug:  FIX: tablet spacing cards

--- a/styles/components/VoteCard/VoteCardList.module.scss
+++ b/styles/components/VoteCard/VoteCardList.module.scss
@@ -92,6 +92,13 @@
     }
   }
   .scroll {
+    justify-content: space-around;
+    flex-wrap: wrap;
+  }
+}
+
+@media all and (min-width: 1081px) {
+  .scroll {
     justify-content: space-between;
     flex-wrap: wrap;
   }
